--- a/HuaShanApp/app/src/main/res/layout/fragment_today.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_today.xml
@@ -571,7 +571,7 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/userhead_icon"
+                android:src="@drawable/user_logo"
                 android:layout_gravity="center_vertical"
                 app:layout_marginLeftPercent="5%"
                 android:id="@+id/head_img"
