--- a/HuaShanApp/app/src/main/res/layout/activity_about.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_about.xml
@@ -110,7 +110,9 @@
                 android:layout_width="match_parent"
                 app:layout_heightPercent="10%"
                 app:layout_marginTopPercent="35.3%"
-                android:background="#fff">
+                android:background="#fff"
+                android:onClick="@{handler.updata}"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
