--- a/HuaShanApp/app/src/main/res/layout/activity_myprofits.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_myprofits.xml
@@ -76,6 +76,7 @@
 
 
         <android.support.percent.PercentFrameLayout
+            android:id="@+id/content_pl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_heightPercent="92.5%"
@@ -153,6 +154,7 @@
                                 android:textSize="16dp"/>
 
                             <TextView
+                                android:id="@+id/tv_alreadyProfits"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="right|center_vertical"
@@ -184,6 +186,7 @@
                                 android:textSize="16dp"/>
 
                             <TextView
+                                android:id="@+id/tv_alreadyReferralFees"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="right|center_vertical"
