--- a/HuaShanApp/app/src/main/res/layout/activity_mysettings.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_mysettings.xml
@@ -145,7 +145,7 @@
                     android:textColor="@color/setup_text_color_1"
                     android:textSize="@dimen/setup_pa1_text_size"
                     app:layout_marginRightPercent="10%"
-                    android:text="chayewala"/>
+                    android:text=""/>
 
                 <ImageView
                     app:layout_widthPercent="4%"
@@ -182,7 +182,7 @@
                     android:textColor="@color/setup_text_color_1"
                     android:textSize="@dimen/setup_pa1_text_size"
                     app:layout_marginRightPercent="5%"
-                    android:text="王蕙"/>
+                    android:text=""/>
 
                 <!--<ImageView-->
                     <!--app:layout_widthPercent="4%"-->
@@ -217,7 +217,7 @@
                     android:textColor="@color/setup_text_color_1"
                     android:textSize="@dimen/setup_pa1_text_size"
                     app:layout_marginRightPercent="5%"
-                    android:text="131*****017"/>
+                    android:text=""/>
 
                 <!--<ImageView-->
                 <!--app:layout_widthPercent="4%"-->
