--- a/HuaShanApp/app/src/main/res/layout/activity_loading.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_loading.xml
@@ -7,6 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="图 片"/>
+        android:text=""
+        android:background="@drawable/loading_bg"/>
 
 </FrameLayout>
