--- a/HuaShanApp/app/src/main/res/layout/activity_purchase.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_purchase.xml
@@ -144,7 +144,8 @@
                     android:layout_height="wrap_content"
                     app:layout_marginRightPercent="5%"
                     android:layout_gravity="right|center_vertical"
-                    android:onClick="@{handler.onPaymentMethod}">
+                    android:onClick="@{handler.onPaymentMethod}"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -157,6 +158,26 @@
                         android:layout_width="15dp"
                         android:layout_height="15dp"
                         android:src="@drawable/goto_icon"/>
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    app:layout_heightPercent="40%"
+                    app:layout_marginRightPercent="10%"
+                    android:layout_gravity="right|bottom"
+                    android:onClick="@{handler.Recharge}"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="充值"
+                        android:textSize="12dp"
+                        android:textColor="#0894EC"/>
+
 
                 </LinearLayout>
 
