--- a/HuaShanApp/app/src/main/res/layout/view_input.xml
+++ b/HuaShanApp/app/src/main/res/layout/view_input.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             app:layout_heightPercent="40%"
             android:gravity="center"
-            android:text="华善账户：11111111"
+            android:text="未知"
             android:textSize="@dimen/promptdialog_text_size_1"
             android:textColor="@color/SMSauthenticationView_text_color_1"/>
 
