--- a/HuaShanApp/app/src/main/res/layout/activity_authenticated.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_authenticated.xml
@@ -126,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|right"
                     app:layout_marginRightPercent="5%"
-                    android:text="*蕙"
+                    android:text=""
                     android:textSize="@dimen/AuthenticatedActivity_text_size_1"
                     android:textColor="@color/AuthenticatedActivity_text_color_2"/>
 
@@ -155,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|right"
                     app:layout_marginRightPercent="5%"
-                    android:text="5****************7"
+                    android:text=""
                     android:textSize="@dimen/AuthenticatedActivity_text_size_1"
                     android:textColor="@color/AuthenticatedActivity_text_color_2"/>
 
