--- a/HuaShanApp/app/src/main/res/layout/activity_loading.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_loading.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     >
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:text=""
         android:background="@drawable/loading_bg"/>
