--- a/HuaShanApp/app/src/main/res/layout/activity_myfinance.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_myfinance.xml
@@ -69,7 +69,7 @@
         </LinearLayout>
 
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <com.example.utils.custom.VpSwipeRefreshLayout
             android:id="@+id/swl_pl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -81,7 +81,7 @@
                     android:layout_below="@+id/title_ll"
                     app:layout_heightPercent="100%"
                     android:background="@color/all_activity_background"
-
+                    android:descendantFocusability="afterDescendants"
                     >
 
                     <!--第1部分-->
@@ -89,7 +89,8 @@
                         android:id="@+id/pf_path_1"
                         android:layout_width="match_parent"
                         app:layout_heightPercent="22%"
-                        android:background="#66b3ff">
+                        android:background="#66b3ff"
+                        android:descendantFocusability="afterDescendants">
 
 
                         <TextView
@@ -136,6 +137,7 @@
                         app:layout_heightPercent="58%"
                         app:layout_marginTopPercent="32%"
                         android:background="@color/all_activity_background"
+                        android:descendantFocusability="afterDescendants"
                         >
 
                         <android.support.percent.PercentFrameLayout
@@ -194,7 +196,7 @@
 
                 </android.support.percent.PercentFrameLayout>
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </com.example.utils.custom.VpSwipeRefreshLayout>
 
         <com.example.paymentpassword.PasswordView
             android:id="@+id/pwd_view"
