--- a/HuaShanApp/app/src/main/res/layout/activity_myreturndetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_myreturndetails.xml
@@ -135,7 +135,7 @@
                             android:layout_gravity="center_horizontal"
                             android:gravity="center"
                             app:layout_marginTopPercent="18%"
-                            android:text="产融贷CR216001-41"/>
+                            android:text="标名称"/>
 
                         <TextView
                             android:id="@+id/tv_amount"
@@ -144,7 +144,7 @@
                             android:layout_gravity="center_horizontal"
                             android:gravity="center"
                             app:layout_marginTopPercent="30%"
-                            android:text="+3,000.00"
+                            android:text="0.00"
                             android:textColor="#f00"
                             android:textSize="@dimen/transactiondetails_content_text_size"/>
 
@@ -155,7 +155,7 @@
                             android:layout_gravity="center_horizontal"
                             app:layout_marginTopPercent="45%"
                             android:gravity="center"
-                            android:text="已收回款"
+                            android:text="状态"
                             android:textSize="@dimen/transactiondetails_statet_text_size"/>
 
                         <TextView
@@ -192,7 +192,7 @@
                             app:layout_marginRightPercent="5%"
                             android:layout_gravity="right"
                             android:gravity="center"
-                            android:text="批量代付-账户余额"
+                            android:text=""
                             android:textSize="@dimen/transactiondetails_text_size"/>
 
 
@@ -215,7 +215,7 @@
                             android:gravity="center"
                             android:layout_gravity="right"
                             android:textSize="@dimen/transactiondetails_text_size"
-                            android:text="2016-11-13 14:13"/>
+                            android:text=""/>
 
                         <TextView
                             android:id="@+id/tv_period"
@@ -225,7 +225,7 @@
                             android:layout_gravity="right"
                             app:layout_marginRightPercent="5%"
                             android:gravity="center"
-                            android:text="第二期/共三期"
+                            android:text=""
                             android:textSize="@dimen/transactiondetails_service_text_size"
                             />
 
