--- a/HuaShanApp/app/src/main/res/layout/activity_transaction.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_transaction.xml
@@ -20,7 +20,7 @@
             android:id="@+id/title_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/fw"
+            android:background="#3BAAFE"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_heightPercent="8%"
