--- a/HuaShanApp/app/src/main/res/layout/activity_investment_details.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_investment_details.xml
@@ -67,6 +67,7 @@
             app:layout_widthPercent="7%"
             android:layout_height="match_parent"
             android:src="@drawable/share_icon"
+            android:visibility="gone"
         />
         </android.support.percent.PercentRelativeLayout>
         </LinearLayout>
