--- a/HuaShanApp/app/src/main/res/layout/activity_login.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_login.xml
@@ -15,13 +15,13 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/all_activity_background"
+        android:background="#fff"
         >
         <LinearLayout
             android:id="@+id/title_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/title_color"
+            android:background="#fff"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_heightPercent="8%"
@@ -39,7 +39,7 @@
             android:layout_width="0dp"
             app:layout_widthPercent="7%"
             android:layout_height="match_parent"
-            android:src="@drawable/back_icon"
+            android:src="@drawable/cha_2"
             />
 
         </android.support.percent.PercentRelativeLayout>
@@ -57,7 +57,7 @@
             android:id="@+id/add_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingRight="20dp">
+            android:paddingRight="35dp">
 
         <ImageView
 
@@ -66,6 +66,15 @@
             android:layout_height="match_parent"
 
         />
+
+            <TextView
+                android:id="@+id/sel_usertype"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="切换到企业用户登陆"
+                android:textColor="@color/title_color"/>
+
         </android.support.percent.PercentRelativeLayout>
         </LinearLayout>
 
@@ -147,13 +156,23 @@
                 <!--app:layout_marginBottomPercent="10%"-->
                 <!--app:layout_marginLeftPercent="22%"/>-->
 
-                <!--<ImageView-->
-                <!--app:layout_widthPercent="95%"-->
-                <!--android:layout_height="1dp"-->
-                <!--android:background="@color/login_content_line_color"-->
-                <!--android:layout_gravity="center"-->
+                <ImageView
+                app:layout_widthPercent="100%"
+                android:layout_height="1dp"
+                android:background="@color/line_color"
+                android:layout_gravity="center"
 
-                <!--/>-->
+                />
+
+                <ImageView
+                    app:layout_widthPercent="100%"
+                    android:layout_height="1dp"
+                    android:background="@color/line_color"
+                    android:layout_gravity="bottom|center_horizontal"
+
+                    />
+
+
 
             </android.support.percent.PercentFrameLayout>
 
@@ -170,31 +189,45 @@
                 android:textColor="#fff"
                 android:clickable="true"/>
 
-            <android.support.percent.PercentFrameLayout
+            <android.support.percent.PercentRelativeLayout
                 app:layout_widthPercent="95%"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 app:layout_marginTopPercent="42%">
 
+                <ImageView
+                    android:id="@+id/img_line"
+                    android:layout_width="1dp"
+                    android:layout_height="10dp"
+                    android:background="@color/line_color"
+                    android:layout_centerInParent="true"
+                    />
+
                 <TextView
-                    app:layout_widthPercent="40%"
+                    android:id="@+id/tv_findpassword"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_toLeftOf="@+id/img_line"
+                    app:layout_marginRightPercent = "5%"
                     android:gravity="center"
-                    android:text="忘记密码?"
+                    android:text="忘记密码"
                     android:textColor="@color/login_btn_text_color"
                     android:onClick="@{handler.toFindpassword}"/>
 
+
+
                 <TextView
-                    app:layout_widthPercent="40%"
+                    android:id="@+id/tv_register"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_toRightOf="@+id/img_line"
+                    app:layout_marginLeftPercent="5%"
                     android:gravity="center"
                     android:text="注册账号"
                     android:textColor="@color/login_btn_text_color"
                     android:onClick="@{handler.toRegister}"/>
 
-            </android.support.percent.PercentFrameLayout>
+            </android.support.percent.PercentRelativeLayout>
 
 
         </android.support.percent.PercentFrameLayout>
