--- a/HuaShanApp/app/src/main/res/layout/activity_rechargecash.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_rechargecash.xml
@@ -101,6 +101,7 @@
                 android:textSize="32dp"/>
 
             <TextView
+                android:id="@+id/tv_recharge"
                 app:layout_widthPercent="90%"
                 app:layout_heightPercent="7%"
                 android:layout_gravity="center_horizontal"
