--- a/HuaShanApp/app/src/main/res/layout/activity_recommend.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_recommend.xml
@@ -71,7 +71,14 @@
         >
 
 
+        <WebView
+            android:id="@+id/web"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            android:scrollbars="none">
 
+        </WebView>
 
     </android.support.percent.PercentFrameLayout>
 </android.support.percent.PercentRelativeLayout>
