--- a/HuaShanApp/app/src/main/res/layout/activity_messagedetails.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_messagedetails.xml
@@ -73,6 +73,7 @@
         </LinearLayout>
 
         <android.support.percent.PercentFrameLayout
+            android:id="@+id/content_pl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
