--- a/HuaShanApp/app/src/main/res/layout/layout_transaction_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_transaction_item.xml
@@ -14,7 +14,7 @@
             app:layout_heightPercent="50%"
             app:layout_marginLeftPercent="5%"
             android:gravity="bottom"
-            android:text="周日"
+            android:text="星期"
             android:textSize="18dp"/>
 
         <TextView
@@ -24,7 +24,7 @@
             app:layout_marginLeftPercent="5%"
             android:layout_gravity="bottom"
             android:gravity="top"
-            android:text="11-13"
+            android:text="01-01"
             android:textSize="15dp"/>
 
 
@@ -35,7 +35,7 @@
             app:layout_marginLeftPercent="35%"
 
             android:gravity="bottom"
-            android:text="+3195.00"
+            android:text="+0.00"
             android:textSize="18dp"/>
 
         <TextView
@@ -45,7 +45,7 @@
             app:layout_marginLeftPercent="35%"
             android:layout_gravity="bottom"
             android:gravity="top"
-            android:text="银行卡到余额账户-充值"
+            android:text=""
             android:textSize="15dp"/>
 
         <ImageView
