--- a/HuaShanApp/app/src/main/res/layout/dialog_smsauthentication.xml
+++ b/HuaShanApp/app/src/main/res/layout/dialog_smsauthentication.xml
@@ -82,7 +82,9 @@
                 app:layout_marginLeftPercent="5%"
                 android:layout_gravity="center_vertical"
                 android:hint="填写短信验证码"
-                android:gravity="center"
+                android:paddingLeft="12dp"
+                android:inputType="number"
+                android:maxLength="6"
                 android:textColorHint="#e0e0e0"
                 android:background="@drawable/u41"
                 android:textSize="14dp"/>
