--- a/HuaShanApp/app/src/main/res/layout/layout_det_con_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_det_con_item.xml
@@ -3,35 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="35dp">
 
     <TextView
         android:id="@+id/det_user"
-        app:layout_widthPercent="50%"
+        app:layout_widthPercent="20%"
         app:layout_heightPercent="50%"
+        android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
-        android:text="a***2"/>
+        android:text="*****"/>
 
     <TextView
         android:id="@+id/det_time"
-        app:layout_widthPercent="50%"
+        app:layout_widthPercent="35%"
         app:layout_heightPercent="50%"
-        android:layout_gravity="bottom"
-        android:text="2016-11-11 12;00;00"/>
-
-    <TextView
-        android:id="@+id/det_mon"
-        app:layout_widthPercent="50%"
-        app:layout_heightPercent="50%"
-        android:layout_gravity="right"
-        android:gravity="right|center_vertical"
-        android:text="200.000.00"/>
+        android:layout_gravity="right|center_vertical"
+        android:gravity="center"
+        android:text=""/>
 
     <TextView
         android:id="@+id/det_mod"
         app:layout_widthPercent="50%"
         app:layout_heightPercent="50%"
         android:layout_gravity="right|bottom"
+        android:visibility="gone"
         android:gravity="right"
         android:text="手动购买"/>
 
@@ -40,4 +35,13 @@
         android:layout_height="1dp"
         android:layout_gravity="bottom"
         android:background="@color/line_color"/>
+
+    <TextView
+        android:id="@+id/det_mon"
+        app:layout_widthPercent="40%"
+        app:layout_heightPercent="50%"
+        app:layout_marginLeftPercent="22%"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
+        android:text="0.00"/>
 </android.support.percent.PercentFrameLayout>
