--- a/HuaShanApp/app/src/main/res/layout/layout_project_content_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_project_content_item.xml
@@ -38,6 +38,7 @@
                 android:src="@drawable/goto_icon"
                 app:layout_marginRightPercent="3%"
                 android:id="@+id/imageView2"
+                android:visibility="gone"
                 />
 
         </android.support.percent.PercentFrameLayout>
